# hegel-cpp

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  IMPLEMENTATION_PLAN.md  README.md  RELEASE-sample.md  RELEASE.md  flake.nix  justfile  note.txt  result
.claude/: CLAUDE.md
.github/actions/install-tools/: action.yml
.github/scripts/: release.py
.github/workflows/: build-and-test.yml  ci.yml  conformance.yml  docs.yml  format.yml  nix.yml  release.yml
cmake/: hegelConfig.cmake.in
docs/: Doxyfile.in  getting-started.md
examples/: CMakeLists.txt  bounded_queue.h  bounded_queue.hpp  example_usage.cpp  fraction.h  fraction.hpp  hegel_workout.cpp  lru_cache.h  run_length.h  run_length.hpp  sorted_vec.h  test_bounded_queue.cpp  test_fraction.cpp  test_lru_cache.cpp  test_run_length.cpp  test_sorted_vec.cpp
include/hegel/: base64.h  cbor.h  core.h  core.hpp  detail.h  detail.hpp  embedded.h  embedded.hpp  generators.h  generators.hpp  grouping.h  grouping.hpp  gtest.h  hegel.h  hegel.hpp  internal.h  json.h  nlohmann_reader.h  options.h  settings.h  strategies.h  strategies.hpp  test_case.h  testing.h
include/hegel/detail/: base64.h  base64.hpp
include/hegel/generators/: builds.h  collections.h  combinators.h  default.h  derived.h  formats.h  numeric.h  primitives.h  random.h  strings.h
nix/: default.nix  flake.nix
src/: base64.cpp  base64.h  connection.cpp  connection.h  crc32.cpp  crc32.h  data.cpp  data.h  data_source.cpp  data_source.h  detail.cpp  generators.cpp  hegel.cpp  impl.cpp  impl.h  internal.cpp  json.cpp  json_impl.h  protocol.cpp  protocol.h  run_state.cpp  run_state.h  socket.cpp  socket.h  strategies.cpp  test_case.cpp  test_case.h  utils.cpp  utils.h
suts/: CMakeLists.txt  fraction.hpp  lru_cache.hpp  sorted_vec.hpp  test_bounded_queue.cpp  test_lru_cache.cpp  test_run_length.cpp  test_sorted_vec.cpp
tests/: CMakeLists.txt  gtest_failure_test.cpp  property_tests.cpp  test_base64.cpp  test_compose.cpp  test_coverage.cpp  test_crc32.cpp  test_derived.cpp  test_explicit_examples.cpp  test_gtest.cpp  test_hegel.cpp  test_no_nlohmann_include.cpp  test_output.cpp  test_protocol.cpp  test_random.cpp  test_settings.cpp  test_utils.cpp
tests/common/: subprocess.h  temp_project.h  utils.h
tests/conformance/: CMakeLists.txt  metrics.hpp  pyproject.toml  test_booleans.cpp  test_conformance.py  test_floats.cpp  test_integers.cpp  test_lists.cpp  test_sampled_from.cpp  test_text.cpp
tests/conformance/.claude/: reliability-config.yaml
tests/conformance/cpp/: CMakeLists.txt  metrics.h  test_binary.cpp  test_booleans.cpp  test_error_handling.cpp  test_floats.cpp  test_hashmaps.cpp  test_integers.cpp  test_lists.cpp  test_one_of.cpp  test_sampled_from.cpp  test_text.cpp
tests/find_quality/: test_collections.cpp  test_floats.cpp  test_integers.cpp  test_one_of.cpp  test_strings.cpp
tests/nix/: CMakeLists.txt  default.nix  flake.nix  main.cpp
tests/shrink_quality/: test_collections.cpp  test_flatmap.cpp  test_floats.cpp  test_integers.cpp  test_mixed_types.cpp  test_strings.cpp
tests/temp_project_template/: CMakeLists.txt  main.cpp
tests/unit/: test_protocol.cpp  test_utils.cpp
